--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-PORT=3000
-MONGODB_URI=
-SECRET_KEY=change_me
+NODE_ENV = development
+PORT = 3006
+
+URI_MONGO=mongodb://localhost:27017/GastroFlow
+
+JWT_SECRET=MyVerySecretKeyForJWTTokenAuthenticationWith256Bits!
+JWT_ISSUER=AuthService
+JWT_AUDIENCE=AuthService
+
+
