--- a/.env
+++ b/.env
@@ -4,7 +4,37 @@ PORT = 3006
 URI_MONGO=mongodb://localhost:27017/GastroFlow
 
 JWT_SECRET=MyVerySecretKeyForJWTTokenAuthenticationWith256Bits!
+JWT_EXPIRES_IN=30m
+JWT_REFRESH_EXPIRES_IN=7d
 JWT_ISSUER=AuthService
 JWT_AUDIENCE=AuthService
 
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_ENABLE_SSL=true
+SMTP_USERNAME=kinalsports@gmail.com
+SMTP_PASSWORD=yrsd prvf kwat toee
+EMAIL_FROM=kinalsports@gmail.com
+EMAIL_FROM_NAME=AuthDotnet App
 
+# Verification Tokens (en horas)
+VERIFICATION_EMAIL_EXPIRY_HOURS=24
+PASSWORD_RESET_EXPIRY_HOURS=1
+
+# Frontend URL (para enlaces en emails)
+FRONTEND_URL=http://localhost:5173
+
+# Cloudinary (upload de imágenes de perfil)
+CLOUDINARY_CLOUD_NAME=dqx1m6nxh
+CLOUDINARY_API_KEY=549781795817196
+CLOUDINARY_API_SECRET=vDkBjmfoUwiDruTJiv1z6LMMMRI
+CLOUDINARY_BASE_URL=https://res.cloudinary.com/dqx1m6nxh/image/upload/
+CLOUDINARY_FOLDER=gastroflow/profiles
+CLOUDINARY_DEFAULT_AVATAR_FILENAME=default-avatar_ewzxwx.png
+
+# File Upload (alternativa local)
+UPLOAD_PATH=./uploads
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:3006
+ADMIN_ALLOWED_ORIGINS=http://localhost:5173
