--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.2.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^8.0.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2",
     "uuid": "^13.0.0"
   }
 }
